--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,20 @@
   border: none;
 }
 
+.content {
+  padding: 16px;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.sticky + .content {
+  padding-top: 60px;
+}
+
 .darktheme {
   background-color: #222222;
   color: white;
@@ -76,9 +90,17 @@
 
 #SI {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  height: 50%;
+  margin-left: 10px;
+  width: 45%;
+  height: 45%;
   margin-top: 15px;
+}
+
+.PTable {
+  -webkit-filter: invert(100%);
+  filter: invert(100%);
+  margin-top: 20px;
+  margin-left: 10px;
+  width: 75%;
+  height: 50%;
 }
