--- a/css/style.css
+++ b/css/style.css
@@ -97,10 +97,23 @@
 }
 
 #PTable {
+  margin-top: 10px;
+  width: 100%;
+  height: 1200px;
+}
+
+#PTable2 {
+  margin-top: 10px;
+  width: 100%;
+  height: auto;
   -webkit-filter: invert(100%);
   filter: invert(100%);
-  margin-top: 20px;
-  margin-left: 10px;
-  width: 75%;
-  height: 50%;
+}
+
+#PTable3 {
+  margin-top: 10px;
+  width: 100%;
+  height: auto;
+  -webkit-filter: invert(100%);
+  filter: invert(100%);
 }
