add integrals, trig identities

--- a/css/style.css
+++ b/css/style.css
@@ -117,3 +117,27 @@
   -webkit-filter: invert(100%);
   filter: invert(100%);
 }
+
+#UnitCircle {
+  margin-top: 10px;
+  -webkit-filter: invert(100%);
+  filter: invert(100%);
+}
+
+#TrigId {
+  margin-top: 10px;
+  -webkit-filter: invert(100%);
+  filter: invert(100%);
+}
+
+#TrigId2 {
+  margin-top: 10px;
+  -webkit-filter: invert(100%);
+  filter: invert(100%);
+}
+
+#Stolen {
+  margin-top: 10px;
+  -webkit-filter: invert(100%);
+  filter: invert(100%);
+}
